--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "bin/www.js",
       "use": "@now/node"
     }
   ],
@@ -10,7 +10,7 @@
     {
       "src": "/(.*)",
 
-      "dest": "app.js"
+      "dest": "/bin/www.js"
     }
   ]
 }
