--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "bin/www.js",
-      "use": "@now/node"
+      "src": "./bin/www.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
 
-      "dest": "/bin/www.js"
+      "dest": "/"
     }
   ]
 }
