--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cointabsoftwareassignment",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "14.1.1"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
